--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://stevecoding100.github.io/singgold-app",
+    "homepage": "http://stevecoding100.github.io/singgoldgit-app",
     "name": "client",
     "version": "0.1.0",
     "private": true,
@@ -12,6 +12,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
+        "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
